--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -273,6 +273,9 @@
                                 <state key="normal" title="Don´t have an account?  Sing Up here">
                                     <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="createAccountBtnPressed:" destination="swE-HO-TSV" eventType="touchUpInside" id="6io-u9-h1Z"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -290,16 +293,170 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Lem-Wg-a53"/>
                     </view>
+                    <connections>
+                        <segue destination="0g3-vG-xLF" kind="show" identifier="toCreateAccount" id="kTz-oP-dMV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qF7-C0-mww" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1573.5999999999999" y="-235.23238380809596"/>
+        </scene>
+        <!--Create AccountVC-->
+        <scene sceneID="yTa-IM-jxu">
+            <objects>
+                <viewController id="0g3-vG-xLF" customClass="CreateAccountVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Fr8-Br-QOT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create an Account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lm5-Ab-I0a">
+                                <rect key="frame" x="103" y="60" width="169" height="23"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NHJ-20-KKX">
+                                <rect key="frame" x="339" y="28" width="28" height="28"/>
+                                <state key="normal" image="closeButton"/>
+                                <connections>
+                                    <action selector="closePressed:" destination="swE-HO-TSV" eventType="touchUpInside" id="HF9-Qr-ORg"/>
+                                    <action selector="closePressed:" destination="0g3-vG-xLF" eventType="touchUpInside" id="Tye-W1-Nr2"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="neV-Fe-9Ah">
+                                <rect key="frame" x="62" y="597" width="250" height="50"/>
+                                <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="HhH-Gn-Jg6"/>
+                                    <constraint firstAttribute="width" constant="250" id="zCN-jJ-abt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Create Account">
+                                    <color key="titleColor" red="0.95294117649999999" green="0.95294117649999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="mFI-CI-bOf">
+                                <rect key="frame" x="62" y="123" width="250" height="216"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mHa-Jb-8d6">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="zTa-LM-9a2"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M8l-CG-zdz">
+                                        <rect key="frame" x="0.0" y="50" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="K9N-fc-4gc"/>
+                                            <constraint firstAttribute="width" constant="250" id="NtY-FG-pkb"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KnW-ZN-yJP">
+                                        <rect key="frame" x="0.0" y="82" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="EM0-hg-IBU"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v5o-5J-7bW">
+                                        <rect key="frame" x="0.0" y="132" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="1kY-oW-1R6"/>
+                                            <constraint firstAttribute="width" constant="250" id="OvO-EA-pPW"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ysQ-N2-RYx">
+                                        <rect key="frame" x="0.0" y="164" width="250" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="DfU-JX-YcK"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ze7-OM-TFy">
+                                        <rect key="frame" x="0.0" y="214" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="2" id="T7e-Za-Ylh"/>
+                                            <constraint firstAttribute="width" constant="250" id="bvO-Fm-SAc"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="P1h-PA-hKk">
+                                <rect key="frame" x="137.5" y="379" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Okb-6Q-wbu"/>
+                                    <constraint firstAttribute="width" constant="100" id="ydv-Br-vh7"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uEv-pX-FRb">
+                                <rect key="frame" x="137" y="379" width="100" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="vpB-Qt-X4d"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <state key="normal" title="Choose Avatar">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccountBtnPressed:" destination="swE-HO-TSV" eventType="touchUpInside" id="dLA-hJ-a4K"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MwN-2a-Fzj">
+                                <rect key="frame" x="112" y="513" width="151" height="26"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <state key="normal" title="Generate Background Color">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccountBtnPressed:" destination="swE-HO-TSV" eventType="touchUpInside" id="6nz-kF-9Yb"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="neV-Fe-9Ah" firstAttribute="centerX" secondItem="Fr8-Br-QOT" secondAttribute="centerX" id="1Sa-bo-7Rh"/>
+                            <constraint firstItem="mFI-CI-bOf" firstAttribute="top" secondItem="Lm5-Ab-I0a" secondAttribute="bottom" constant="40" id="2c4-6x-8Na"/>
+                            <constraint firstItem="wBi-nb-GbU" firstAttribute="trailing" secondItem="NHJ-20-KKX" secondAttribute="trailing" constant="8" id="A0n-VA-Wcq"/>
+                            <constraint firstItem="P1h-PA-hKk" firstAttribute="top" secondItem="mFI-CI-bOf" secondAttribute="bottom" constant="40" id="OL1-KU-2Aa"/>
+                            <constraint firstItem="P1h-PA-hKk" firstAttribute="centerX" secondItem="Fr8-Br-QOT" secondAttribute="centerX" id="UGk-Sq-33p"/>
+                            <constraint firstItem="uEv-pX-FRb" firstAttribute="width" secondItem="P1h-PA-hKk" secondAttribute="width" id="UhV-m1-hZE"/>
+                            <constraint firstItem="mFI-CI-bOf" firstAttribute="centerX" secondItem="Fr8-Br-QOT" secondAttribute="centerX" id="VHJ-5i-AcD"/>
+                            <constraint firstItem="Lm5-Ab-I0a" firstAttribute="top" secondItem="wBi-nb-GbU" secondAttribute="top" constant="40" id="VgA-WF-QOg"/>
+                            <constraint firstItem="NHJ-20-KKX" firstAttribute="top" secondItem="wBi-nb-GbU" secondAttribute="top" constant="8" id="WUL-bv-kLQ"/>
+                            <constraint firstItem="MwN-2a-Fzj" firstAttribute="top" secondItem="uEv-pX-FRb" secondAttribute="bottom" constant="4" id="YIw-S9-Qfe"/>
+                            <constraint firstItem="Lm5-Ab-I0a" firstAttribute="centerX" secondItem="Fr8-Br-QOT" secondAttribute="centerX" id="YL8-7H-z0v"/>
+                            <constraint firstItem="MwN-2a-Fzj" firstAttribute="centerX" secondItem="Fr8-Br-QOT" secondAttribute="centerX" id="YiT-cZ-EM5"/>
+                            <constraint firstItem="uEv-pX-FRb" firstAttribute="centerX" secondItem="Fr8-Br-QOT" secondAttribute="centerX" id="aY6-Pa-8YP"/>
+                            <constraint firstItem="uEv-pX-FRb" firstAttribute="top" secondItem="P1h-PA-hKk" secondAttribute="top" id="fJq-4I-qKM"/>
+                            <constraint firstItem="wBi-nb-GbU" firstAttribute="bottom" secondItem="neV-Fe-9Ah" secondAttribute="bottom" constant="20" id="tyV-Pz-4qI"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="wBi-nb-GbU"/>
+                    </view>
+                    <connections>
+                        <segue destination="8Kz-go-3Rx" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="fKN-wm-Quo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qN7-oK-g5a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="8Kz-go-3Rx" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2268" y="-236.13193403298354"/>
         </scene>
     </scenes>
     <resources>
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
+        <image name="profileDefault" width="192" height="192"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
